--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@
     144.39deg,
     #ffffff -278.56%,
     #6d6d6d -78.47%,
-    #11101d 91.61%
+    #cacaca 91.61%
   );
-  --card-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
+  --card-shadow: 0px 20px 100px -10px rgba(239, 239, 239, 0.1);
 }
 
 * {
