--- a/src/index.css
+++ b/src/index.css
@@ -17,13 +17,12 @@
 
 .text-gradient {
   background: radial-gradient(
-    64.18% 64.18% at 71.16% 35.69%,
-    #def9fa 0.89%,
-    #bef3f5 17.23%,
-    #9dedf0 42.04%,
-    #7de7eb 55.12%,
-    #5ce1e6 71.54%,
-    #33bbcf 100%
+    circle at 71.16% 35.69%,
+    #1abc9c 0%,
+    #18b3aa 10%,
+    #15a9b7 50%,
+    #1390d3 75%,
+    #1f7aec 100%
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
