--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap");
 @import "tailwindcss";
 
+
+:root {
+  --main-text-color: #000000;
+}
+
+
+
 :root {
   --black-gradient: linear-gradient(
     144.39deg,
@@ -27,18 +34,14 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
-  text-fill-color: transparent;
+  text-fill-color: white;
 }
 
 .bg-blue-gradient {
   background: linear-gradient(
     157.81deg,
-    #def9fa -43.27%,
-    #bef3f5 -21.24%,
-    #9dedf0 12.19%,
-    #7de7eb 29.82%,
-    #5ce1e6 51.94%,
-    #33bbcf 90.29%
+    #b2b2b2 50%,
+    rgb(172, 171, 171) 100%
   );
 }
 
@@ -55,21 +58,21 @@
   background: linear-gradient(
     -168.39deg,
     #ffffff -278.56%,
-    #6d6d6d -78.47%,
-    #11101d 91.61%
+    #b0b0b0 -78.47%,
+    rgb(96, 96, 96) 91.61%
   );
 }
 
 .bg-gray-gradient {
   background: linear-gradient(
     153.47deg,
-    rgba(255, 255, 255, 0) -341.94%,
-    #14101d 95.11%
+    rgb(96, 96, 96) -341.94%,
+    rgb(96, 96, 96) 95.11%
   );
 }
 
 .bg-discount-gradient {
-  background: linear-gradient(125.17deg, #272727 0%, #11101d 100%);
+  background: linear-gradient(125.17deg, rgb(96, 96, 96) 0%, rgb(96, 96, 96)  50%, rgb(96, 96, 96) 100%);
 }
 
 .box-shadow {
@@ -121,7 +124,8 @@
 }
 
 .blue__gradient {
-  background: linear-gradient(180deg, rgba(188, 165, 255, 0) 0%, #214d76 100%);
+  background: linear-gradient(180deg, #1abc9c 0%, #1f7aec 100%);
+
   filter: blur(123px);
 }
 
@@ -139,7 +143,7 @@
 
 /* Colors */
 .bg-primary {
-  background-color: #00040f;
+  background-color: #f3f0f0a3;
 }
 
 .text-primary {
@@ -147,15 +151,15 @@
 }
 
 .bg-secondary {
-  background-color: #00f6ff;
+  background-color: #1abc9c;
 }
 
 .text-secondary {
-  color: #00f6ff;
+  color: #1abc9c;
 }
 
 .text-dimWhite {
-  color: rgba(255, 255, 255, 0.7);
+  color: rgba(7, 7, 7, 0.7);
 }
 
 .bg-dimBlue {
